[metadata]
name = Web_map
description = HTML web map which creates html page for films from some dataset
author = Pavlo Kryven
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = 
    Web_map
install_reqires = requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no